# mandelbrotViewer

./: CMakeLists.txt  README.md  mandelbrot.cpp
include/glad/: glad.h
src/: glad.c  mandelbrot.cpp
